--- a/Classes/2.PCA/4.4 Weather Analysis - Visualisation.ipynb
+++ b/Classes/2.PCA/4.4 Weather Analysis - Visualisation.ipynb
@@ -38,15 +38,15 @@
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n",
       "keys from STAT= ['TMIN', 'TOBS', 'TMAX', 'SNOW', 'SNWD', 'PRCP']\n",
-      "13047\n",
+      "12673\n",
       "+---------+--------+---------+-----------+-----------+------+--------------------+------+--------+\n",
       "|elevation|latitude|longitude|measurement|    station|undefs|              vector|  year|   label|\n",
       "+---------+--------+---------+-----------+-----------+------+--------------------+------+--------+\n",
-      "|      6.1| 42.4667|    -70.9|       TMAX|USC00198301|     0|[80 4D 00 46 E0 5...|1931.0|BBBSBBBB|\n",
-      "|      6.1| 42.4667|    -70.9|       TMAX|USC00198301|     0|[00 4F 80 51 00 4...|1932.0|BBBSBBBB|\n",
-      "|      6.1| 42.4667|    -70.9|       TMAX|USC00198301|     2|[20 D0 00 53 A0 5...|1933.0|BBBSBBBB|\n",
-      "|      6.1| 42.4667|    -70.9|       TMAX|USC00198301|     2|[30 55 80 C9 A0 D...|1934.0|BBBSBBBB|\n",
-      "|      6.1| 42.4667|    -70.9|       TMAX|USC00198301|     1|[E0 50 00 CF 00 5...|1935.0|BBBSBBBB|\n",
+      "|    500.2| 48.7603|-101.5089|       TMAX|USC00326025|    40|[90 D5 00 7E 00 7...|1894.0|SBBBBBSB|\n",
+      "|    500.2| 48.7603|-101.5089|       TMAX|USC00326025|    43|[A0 D6 A0 D6 00 7...|1895.0|SBBBBBSB|\n",
+      "|    500.2| 48.7603|-101.5089|       TMAX|USC00326025|    22|[A0 D3 00 C6 00 0...|1898.0|SBBBBBSB|\n",
+      "|    500.2| 48.7603|-101.5089|       TMAX|USC00326025|    47|[00 7E E0 D5 A0 D...|1900.0|SBBBBBSB|\n",
+      "|    500.2| 48.7603|-101.5089|       TMAX|USC00326025|    47|[00 7E 00 7E 00 7...|1901.0|SBBBBBSB|\n",
       "+---------+--------+---------+-----------+-----------+------+--------------------+------+--------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -83,7 +83,8 @@
     "### Read the data frame from pickle file\n",
     "\n",
     "data_dir='../../Data/Weather'\n",
-    "file_index='BBBSBBBB'\n",
+    "#file_index='BBBSBBBB'\n",
+    "file_index='SBBBBBSB'\n",
     "\n",
     "from pickle import load\n",
     "\n",
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -128,6 +129,7 @@
      "frozen": false,
      "read_only": false
     },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -138,13 +140,13 @@
      "output_type": "stream",
      "text": [
       "SELECT * FROM weather\n",
-      "\tWHERE measurement='TMAX' and station='USC00198301'\n",
-      "26 rows\n",
+      "\tWHERE measurement='TMAX' and station='USC00326025'\n",
+      "68 rows\n",
       "+---------+--------+---------+-----------+-----------+------+--------------------+------+--------+\n",
       "|elevation|latitude|longitude|measurement|    station|undefs|              vector|  year|   label|\n",
       "+---------+--------+---------+-----------+-----------+------+--------------------+------+--------+\n",
-      "|      6.1| 42.4667|    -70.9|       TMAX|USC00198301|     0|[80 4D 00 46 E0 5...|1931.0|BBBSBBBB|\n",
-      "|      6.1| 42.4667|    -70.9|       TMAX|USC00198301|     0|[00 4F 80 51 00 4...|1932.0|BBBSBBBB|\n",
+      "|    500.2| 48.7603|-101.5089|       TMAX|USC00326025|    40|[90 D5 00 7E 00 7...|1894.0|SBBBBBSB|\n",
+      "|    500.2| 48.7603|-101.5089|       TMAX|USC00326025|    43|[A0 D6 A0 D6 00 7...|1895.0|SBBBBBSB|\n",
       "+---------+--------+---------+-----------+-----------+------+--------------------+------+--------+\n",
       "only showing top 2 rows\n",
       "\n"
@@ -153,17 +155,27 @@
     {
      "data": {
       "text/plain": [
-       "(26, 365)"
+       "<seaborn.axisgrid.FacetGrid at 0xbf88400>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAVwAAAFcCAYAAACEFgYsAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X9UVHXi//HXyCAqwy8VTBPqfMpWoLJYNmzFNpXyrOWP\nFQeRYE/nuy19VHTXBdRcE8iR9cd63JIsbasVUUlEqXb35CE3O190AlcD5YeWZoCaguCvARWB+/lD\nZxSYGQaYe+femdfjnD3HO8zMfb+77tM7b+7MqARBEEBERKLr5+gBEBG5CgaXiEgiDC4RkUQYXCIi\niTC4REQSYXCJiCSidvQA5KC+/rro+/DzG4TLl5tF348jcG7KxLmJw9/fy+LPeIYrEbXazdFDEA3n\npkycm/QYXCIiiTC4REQSYXCJiCTC4BIRSYTBJSKSCINLRCQRBpeISCIMLhGRRBhcIiKJMLhERBJh\ncAHs+PI73LjV6uhhEJGTY3ABfPnfs/hbXhmjS0SiYnDv+v7sVUaXiETF4AJ40N8TAKNLROJicAGk\nznma0SUi0TG4ALwH9Wd0iUh0DO5d3oP6IzWW0SUi8TC49/H2NB/dmy2MLhH1HYPbibnobtjF6BJR\n3zG4ZjC6RCQGBtcCRpeI7I3BtcIU3aGMLhH1HYPbDW/Pu5eMMbpE1EcMrg0YXSKyBwbXRowuEfUV\ng9sD5qL7N0aXiGzE4PZQ5+h+x+gSkY0Y3F5gdImoNxjcXmJ0iainGNw+YHSJqCcY3D5idInIVgyu\nHZiNbt4xRpeIOmBw7aRLdGuvMLpE1AGDa0fG6I5gdInIDAbXzrw9+2OxmejymyOIiMEVgbkz3Yy/\nf8MzXSIXx+CKxKdTdCt+aODyApGLY3BF1Dm6XNMlcm0MrsiM0Q0c5gWA0SVyZQyuBHw8+2PV3F/y\nTJfIxTG4EvHzGsDlBSIXx+BKiGu6RK6NwZWYpejeamlz8MiISGwMrgOYi+6GvDJGl8jJMbgOwugS\nuR4G14HMLy8wukTOisF1MGN0hw8ZBAA4yegSOS2HBLewsBDJycmm7dLSUmi1WsTGxiIrK6vDfaur\nqzF16lSrz/f+++9j0aJFpm2dToeZM2ciISEBZWVl9h28CHw8+2NxXBijS+TkJA+uTqfD+vXr0d7e\nbrotLS0N69evx86dO1FWVobKykoAQEFBARYtWoTGxkaLz/f111/jwIEDpu2vvvoKZ86cwe7du/H2\n228jIyNDtLnYE6NL5PwkD25YWBjS09NN2waDAS0tLQgKCoJKpUJkZCQOHToEAPDx8UFOTo7F56qu\nrsYnn3yChQsXmm47deoUxo8fj379+mHw4MFwc3NDfX29aPOxJ0aXyLmpxXrivLw8bN26tcNtmZmZ\nmDJlCoqLi023GQwGaDQa07anpydqa2sBABMmTLD4/E1NTXjrrbewZs0anD592nR7cHAwPv74Y7zy\nyiu4cOECTp06hRs3blgdq5/fIKjVbj2aX2/4+3vZcB9gzYLx+PN7B1F70YCTtVew6dMKrPhdBAZ4\niHa4+syWuSkV56ZMcpybaP8P1mq10Gq13d5Po9GgqanJtN3U1ARvb+9uH3fw4EHU19dj0aJFuHbt\nGurq6rBlyxYkJibi+PHjSEhIwKhRoxAaGgpfX1+rz3X5cnP3E+ojf38v1Ndft/n+f4p5Cmt3HMVP\nDc04fvoS3nz/IP4waww8+ov/D0NP9XRuSsK5KZMj52Yt9A6/SkGj0cDd3R01NTUQBAFFRUUIDw/v\n9nEvvvgiPvvsM2zbtg3Lli3D2LFjkZiYiDNnzmD48OHIzc3FvHnzoFKpbAq43Pjc/eYI4/LCiZor\neHs3lxeIlMzhwQWAjIwMpKSkYNasWQgJCcGYMWMs3lev13e5kuF+I0aMwP79+xETE4PFixdjxYoV\nYgxZEj4aD0aXyImoBEEQHD0IR5PipUdfXuJcNdzC2p3f4qeGO0sfo4N8ZbW8wJemysS5ibdvS2Rx\nhkvWmTvT5dULRMrD4CpE5+ierOXyApHSMLgKwjVdImVjcBWG0SVSLgZXgRhdImVicBWK0SVSHgZX\nwRhdImVhcBWO0SVSDgbXCViM7m1Gl0hOGFwnYTa6eYwukZwwuE6E0SWSNwbXyfhoPDp8RxqjSyQf\nDK4T8mV0iWSJwXVSjC6R/DC4TozRJZIXBtfJMbpE8sHgugBGl0geGFwXwegSOR6D60IYXSLHYnBd\njDG6DwxmdImkxuC6IF+NBxbHdYzuO7uPMbpEImNwXVTn6FZVX2Z0iUTG4LowRpdIWgyui2N0iaTD\n4BKjSyQRBpcA3IvuMEaXSDQMLpn4ajywhNElEg2DSx0wukTiYXCpC0aXSBwMLpnF6BLZH4NLFjG6\nRPbF4JJVvne/mJLRJeo7Bpe65efVNbob8xldop5icMkmnaNb+SOjS9RTDC7ZzFJ0b7a0OnhkRMrA\n4FKPmIvuqo9KeKZLZAMGl3qsc3RLv6/n8gKRDRhc6hWu6RL1HINLvWaM7oP+ngAYXaLuMLjUJ35e\nHlg1dxyG+Q0EcC+6LYwuURcMLvXZEJ+BWBwX1iG67zC6RF0wuGQXfl4ejC5RNxhcshtGl8g6Bpfs\nitElsozBJbtjdInMc0hwCwsLkZycbNouLS2FVqtFbGwssrKyOty3uroaU6dOtfg8UVFRSEhIQEJC\nAkpKSgAAWVlZmDVrFmJjY3Hs2DHxJkIWMbpEXaml3qFOp0NRURGCg4NNt6WlpWHjxo0IDAxEYmIi\nKisrERISgoKCAmRnZ6OxsdHsc5WXlyM1NRWTJ0823VZRUYGSkhLk5eXhp59+woIFC5Cfny/6vKgr\nY3TX7jiKi5dvmKK7MPpJ9Hd3c/TwiCQn+RluWFgY0tPTTdsGgwEtLS0ICgqCSqVCZGQkDh06BADw\n8fFBTk6OxeeqqKhAfn4+4uLisHr1arS2tuLIkSOIjIyESqXCiBEj0NbWZjHYJD6e6RLdI9oZbl5e\nHrZu3drhtszMTEyZMgXFxcWm2wwGAzQajWnb09MTtbW1AIAJEyZY3ce4ceMQFRWFkSNHIi0tDbm5\nuTAYDPD19e3wfNevX8fgwYMtPo+f3yCo1eKfcfn7e4m+D0exNjd/fy+sWTAeyzYdxPlLTaj88TLe\n/7wSy/9fBDwUcKbrqsdN6eQ4N9GCq9VqodVqu72fRqNBU1OTabupqQne3t427SM6Otp030mTJmHf\nvn0YPXp0l+fz8rL+H/7y5Wab9tcX/v5eqK+/Lvp+HMHWuSXPfsq0vFD6XT3S3j+IBTJfXuBxUyZH\nzs1a6B1+lYJGo4G7uztqamogCAKKiooQHh7e7eMEQcC0adNw4cIFAIBer0doaCjCwsJQVFSE9vZ2\nnD9/Hu3t7VbPbkk6nZcXKvg2YHIxkv/SzJyMjAykpKSgra0NkZGRGDNmjMX76vV6HDlyBElJSdDp\ndEhKSsKAAQPwyCOPICYmBu7u7ggPD8fs2bPR3t6OFStWSDgT6k7nX6QZoyv3M10ie1AJgiA4ehCO\nJsVLD7586+jy9Vum6AJA6MN+sowuj5sycUmB6D5cXiBXxOCSw5iN7p7jjC45LQaXHKpLdM80Mrrk\ntBhccjhjdAMYXXJyDC7Jgp+XB5YwuuTkGFySDeN3pDG65KwYXJKVwd4DukQ3a89x3G5ldEn5GFyS\nnc7RLT/TiI35jC4pH4NLssTokjNicEm2GF1yNgwuyRqjS86EwSXZMxfdd/J59QIpD4NLisCrF8gZ\nMLikGFxeIKVjcElRGF1SMgaXFIfRJaVicEmRTNH1ZXRJORhcUqzB3gOwOI7RJeVgcEnRGF1SEgaX\nFI/RJaVgcMkpmI0ur9MlmWFwyWl0ie4PjC7Ji83BPXv2LA4cOIC2tjbU1taKOSaiXmN0Sc5sCu6/\n//1vzJ07FzqdDleuXEFsbCw+/fRTscdG1CuMLsmVTcH94IMPsHPnTmg0GgwZMgR79+7Fli1bxB4b\nUa8xuiRHNgW3X79+0Gg0pu2AgAD068flX5I3RpfkxqZqjho1Cjk5OWhtbUVVVRXefPNNjB49Wuyx\nEfUZo0tyYlNwV6xYgYsXL8LDwwPLli2DRqNBWlqa2GMjsgtGl+RCJQiC4OhBOFp9/XXR9+Hv7yXJ\nfhxBKXNrvHYTa3d8i7orNwAAj//PYCyY+QTc1W4WH6OUufUG5ybevi1RW3vg6NGjoVKp7t1ZrUa/\nfv3Q0tICjUaDw4cP22+URCIznukao2s80+0uukT2YnVJ4cSJE6iqqkJMTAxWr16NY8eOoaysDH/7\n298wefJkqcZIZDfG6Pr7DgDA5QWSlk1ruMeOHcP06dNNZ7uTJ0/G8ePHRR0YkVgGew/AkrgwRpck\nZ1NwBw4ciPz8fDQ3N8NgMGD79u3w9fUVe2xEojEX3aw95Ywuicqm4K5btw6FhYUYN24cnnvuOXzz\nzTdYu3at2GMjElXn6B7/oYHRJVHxKgXwKoW+UvrcGq/dxJodR1F/5SYA4MlHhmD+bx6Hu9pN8XOz\nhnMTb9+WWL1KwWjixIkdrlYw2r9/f+9HRSQTxjNdY3SPnW7Au3vLMf83jzt6aORkbArutm3bTH9u\nbW1FYWEhWlpaRBsUkdTufEdaGNbu7BjdtN8/6+ihkROxaQ33wQcfNP3voYcewmuvvYYvv/xS7LER\nSWqIz53oGtd0j51uwF+2HuaaLtmNTWe497/BQRAEfP/997h165ZogyJyFGN0jWe6/626iJaWVtOa\nLlFf2PRLs4SEhHsPUKng5+eH1157DU888YSog5MKf2nWN844t4arN03RNeejpRMlHpH9OeNxM5Lr\nL81sCu53332Hxx57rMNtpaWleOqpp/o+OhlgcPvGWefWcPUmUt87ZPHnSo+usx43QL7BtbqkcOTI\nEbS3t2P58uVYtWoVjG1ubW1Feno69u3bZ9+REsnIEJ8Bjh4CORmrwT106BBKSkpQV1eHt99++96D\n1GrMnj1b9MERETkTq8FdsGABAKCgoAAzZsyQZEBESnG7tY2/SKMesRrcjRs3YsGCBSguLkZxcXGX\nn//lL38RbWBEcmd8cwSjS7ayeh1uaGgoAOCZZ54x+7/eKiwsRHJysmm7tLQUWq0WsbGxyMrK6nDf\n6upqTJ061eLzREVFISEhAQkJCSgpKbHpcUS2+nz9dIs/M7454nZru4QjIiWzeoY7ceKd38JGRER0\nuF2lUsHDw6NXO9TpdCgqKkJwcLDptrS0NGzcuBGBgYFITExEZWUlQkJCUFBQgOzsbDQ2Npp9rvLy\ncqSmpnb5bN7uHkfUE52vRmi4euezFy5dNb4j7Tjm/+YJuKv5xapknU1/Q+bPn48XXngBSUlJpj9H\nR0cjKioKer2+RzsMCwtDenq6adtgMKClpQVBQUFQqVSIjIzEoUN3LsXx8fFBTk6OxeeqqKhAfn4+\n4uLisHr1arS2ttr0OKK+GOJz57MXhvrce0fau3uP80yXumXTO82GDRuGlStX4vHH73yYx8mTJ5GV\nlYVly5ZhwYIF2L17d5fH5OXlYevWrR1uy8zMxJQpUzqsBxsMhg5fwe7p6Yna2loAwIQJE6yOa9y4\ncYiKisLIkSORlpaG3NxcxMfHd/u4zvz8BkEtwTqctevzlM7V5ubv74U1C8Zj2aaDuNjYjGOnG/DB\nv6qw7NVfKGpN19WOm6PZFNxz586ZYgsAP/vZz1BTU4Phw4ejrc38+8y1Wi20Wm23z63RaNDU1GTa\nbmpqgre3ty3DQnR0tOm+kyZN6vV1wZcvN/fqcT3Bi8yVydrcVABSZj9lWl74b9VFpG/RK2Z5wVWP\nmxT7tsSmvxWBgYH461//iu+//x4nT57E+vXr8dBDD+Hbb79Fv359+4ul0Wjg7u6OmpoaCIKAoqIi\nhIeHd/s4QRAwbdo0XLhwAQCg1+tNv+QjksoQnzvfkcblBbKFTbVcu3YtWltbkZycjKVLl6K9vR2Z\nmZmora1FRkZGnweRkZGBlJQUzJo1CyEhIRgzZozF++r1emRlZUGlUkGn0yEpKQnx8fG4ceMGYmJi\n+jwWop4a6jOQ0SWb8BsfwM9S6CvO7Y5LV29g7Y5vcenq/d8cId/lBR438fZtiU1/E/bs2YOIiAgE\nBwcjODgYo0eP7nBZFxHxTJe6Z1Nw3333XWzbtg1VVVWoqqrCiRMnUFVVJfbYiBTHXHQ3Mbp0l03B\nHTZsWJePZyQi8zpHt4zRpbtsuiwsNDQUCxcuxLhx4zq8w4wfaENknjG6xjVdY3TnyXhNl8Rn05E3\nGAzw9PREaWmp6YNszH2YDRHdwzNd6szmqxRu376NM2fOoK2tDaNGjYJabdPJsSLwKoW+4dysk+vV\nCzxu4u3bEpuOeHl5OSZPnoylS5fijTfewPPPP4+ysjK7DZDImfEXaWRkU3B1Oh02bNiAPXv2oKCg\nAFlZWVi5cqXYYyNyGlxeIMDG4DY3N3d499dTTz3Fr0kn6iFGl2wKro+PD7788kvTdmFhIXx9fUUb\nFJGzYnRdm03BXblyJTZv3oyIiAhERERg8+bNeOutt8QeG5FTYnRdl9WrFBISEqBSqQDc+XSu5uZm\nCIIAT09PqFQqZGdnSzZQMfEqhb7h3Hrn0pUbWLvz3tULYx4ZIul1ujxu4u3bEpu+tZeI7G+o70As\nnvO0KbplpxvwXkE55s543OGXjJE4rAa3L18USUTd6xzd0lOXGF0nxiNK5GDG6BrXdI3R5Zqu82Fw\niWSA0XUNDC6RTBijO8Sb0XVWDC6RjAz1HYglcYyus2JwiWTGUnRb2xhdpWNwiWTIXHQ37WV0lY7B\nJZIpRtf5MLhEMsboOhcGl0jmLEWXv0hTHgaXSAH4izTnwOASKQSXF5SPwSVSEEZX2RhcIoVhdJWL\nwSVSIEZXmRhcIoVidJWHwSVSMEZXWRhcIoVjdJWDwSVyAoyuMjC4RE7iXnQ9APDNEXLE4BI5kaG+\nA7E4LswU3W+/Z3TlhMElcjL+jK5sMbhETojRlScGl8hJMbryw+ASOTFGV14YXCInZym6/Dxd6TG4\nRC7AXHTXZB/mma7EGFwiF9E5usUVF7i8IDEGl8iFcE3XsRhcIhfj7zsQqXFh8PcbCIDRlRKDS+SC\nAnwHInPuOJ7pSswhwS0sLERycrJpu7S0FFqtFrGxscjKyupw3+rqakydOtXi80RFRSEhIQEJCQko\nKSkBAKxZswazZ89GdHQ0du3aJd5EiBTsgSGeSOXygqTUUu9Qp9OhqKgIwcHBptvS0tKwceNGBAYG\nIjExEZWVlQgJCUFBQQGys7PR2Nho9rnKy8uRmpqKyZMnm2775ptvUFNTg08++QQtLS146aWXMHny\nZPj4+Ig+NyKlCbi7vLBux1E0XLtliu7cGY9D7cYXwPYm+X/RsLAwpKenm7YNBgNaWloQFBQElUqF\nyMhIHDp0CADg4+ODnJwci89VUVGB/Px8xMXFYfXq1WhtbcXTTz+NzMxM033a2tqgVkv+7wqRYhij\nO/i+M933P63gma4IRCtRXl4etm7d2uG2zMxMTJkyBcXFxabbDAYDNBqNadvT0xO1tbUAgAkTJljd\nx7hx4xAVFYWRI0ciLS0Nubm5iI+Ph4eHB27fvo2lS5di9uzZ8PT0tPo8fn6DoFa79XSKPebv7yX6\nPhyFc1Mm49z8/b2wJmk83th0EJeu3MDR7+rx8RcnkRofDne1Ms905XjcRAuuVquFVqvt9n4ajQZN\nTU2m7aamJnh7e9u0j+joaNN9J02ahH379gEArl69ioULF+KZZ57B66+/3u3zXL7cbNP++sLf3wv1\n9ddF348jcG7K1HlubgBSYp/C2h1H0XjtFvTHf4Luw2/wv9NDFbe84MjjZi30Dv+vqNFo4O7ujpqa\nGgiCgKKiIoSHh3f7OEEQMG3aNFy4cAEAoNfrERoaips3b+LVV19FdHQ05s+fL/bwiZxKwN3rdI3L\nC0e/q+fygh05PLgAkJGRgZSUFMyaNQshISEYM2aMxfvq9XpkZWVBpVJBp9MhKSkJ8fHxuHHjBmJi\nYpCbm4va2lrk5eWZrl4wLlEQUfcYXfGoBEEQHD0IR5PipYcrvTR1Jq48t7orN0zLCwAQ9pi/YpYX\nuKRARIrCM137Y3CJyKIA34FYPOdpRtdOGFwisirAbxCjaycMLhF1i9G1DwaXiGzC6PYdg0tENmN0\n+4bBJaIeYXR7j8Eloh5jdHuHwSWiXjFG18/rXnQ3M7pWMbhE1GsBfoOwJO5edI8wulYxuETUJ4yu\n7RhcIuozRtc2DC4R2QWj2z0Gl4jsxmx0P2N0jRhcIrKrLtE9yegaMbhEZHcBfoOwmNHtgsElIlEM\nY3S7YHCJSDSMbkcMLhGJymx0XfTqBQaXiETXJbouevUCg0tEkuDyAoNLRBJy9egyuEQkKVeOLoNL\nRJJz1egyuETkEOaiu8XJo8vgEpHDdI7uf508ugwuETmUK0WXwSUih3OV6DK4RCQLrhBdBpeIZMPZ\no8vgEpGsmI3u55VOEV0Gl4hkp0t0T9Q5RXQZXCKSpWF+g7B4jnNFl8ElItkaNti5osvgEpGsOVN0\nGVwikj1niS6DS0SK4AzRZXCJSDGM0fXV9AegvOgyuESkKMMGD8KSuLAu0W1rl390GVwiUhxz0d38\nmfyjy+ASkSIpMboMLhEplsXoynRNl8ElIkUzF91124/I8kyXwSUixRs2eBAW3xfdg2XnZbm8wOAS\nkVN4oFN0/3uiDltkFl2HBLewsBDJycmm7dLSUmi1WsTGxiIrK6vDfaurqzF16lSLzxMVFYWEhAQk\nJCSgpKQEALBhwwZotVrExMSguLhYvIkQkawYozvYewAA4LDMoquWeoc6nQ5FRUUIDg423ZaWloaN\nGzciMDAQiYmJqKysREhICAoKCpCdnY3Gxkazz1VeXo7U1FRMnjzZdFtlZSVKS0uxa9cunDt3DvPm\nzcNnn30m+ryISB4eGDwImfPGYWnW/8cVQwsOn6gDACROC4FbP8e+qJd872FhYUhPTzdtGwwGtLS0\nICgoCCqVCpGRkTh06BAAwMfHBzk5ORafq6KiAvn5+YiLi8Pq1avR2tqKkJAQfPjhh1CpVDh//jy8\nvb3FnhIRycyD/poOywtyOdMV7Qw3Ly8PW7du7XBbZmYmpkyZ0uFlvsFggEajMW17enqitrYWADBh\nwgSr+xg3bhyioqIwcuRIpKWlITc3F/Hx8VCr1diwYQOys7Px5ptvdjtWP79BUKvdejK9XvH39xJ9\nH47CuSmTM8/tiZ8Nw+qk8Vi2qQiN127h8Ik6eHiokfLKz+Hm5pgzXdGCq9VqodVqu72fRqNBU1OT\nabupqcnms9Lo6GjTfSdNmoR9+/aZfrZo0SL8/ve/x+zZsxEeHo6goCCLz3P5crNN++sLf38v1Ndf\nF30/jsC5KZMrzK0/gJTYp7Fmx1FcNbSgqOw8bt1qFXV5wdo/Yg6/SkGj0cDd3R01NTUQBAFFRUUI\nDw/v9nGCIGDatGm4cOECAECv1yM0NBR6vR4ZGRkAAA8PD6jVaqhUKlHnQETy9cDd63R9ZLC8IPkv\nzczJyMhASkoK2traEBkZiTFjxli8r16vx5EjR5CUlASdToekpCQMGDAAjzzyCGJiYtCvXz988cUX\niI2NRXt7O1555RUEBgZKOBsikhtjdI1nuo76RZpKEARBsr3JlBQvq1zh5Zsz4tyUydLcLjQ2m6IL\nAM8EB+D3U+0bXVkvKRARSaXz8kJJVR0+kPCjHRlcInIpjowug0tELsdR0WVwicglOSK6DC4RuawH\n7n5HmlTRZXCJyKUNH+IpWXQZXCJyeVJFl8ElIoI00WVwiYjuEju6DC4R0X1M0fW0f3QZXCKiToYP\n8cTiOPtHl8ElIjJDjOgyuEREFtg7ugwuEZEV5qL7939W9Sq6DC4RUTdM0b179UJx5cVeRZfBJSKy\nQeerF3oTXQaXiMhGnZcXehpdBpeIqAf6El0Gl4ioh3obXQaXiKgXLEXXGgaXiKiXzEXXGgaXiKgP\nOkfXGgaXiKiPOl+nawmDS0RkB8OHeGL1689avQ+DS0RkJx7ublZ/zuASEUmEwSUikgiDS0QkEQaX\niEgiDC4RkUQYXCIiiTC4REQSYXCJiCTC4BIRSYTBJSKSCINLRCQRlSAIgqMHQUTkCniGS0QkEQaX\niEgiDC4RkUQYXCIiiTC4REQSYXCJiCSidvQAlKihoQEzZ87ERx99hJaWFqSlpcHNzQ0PP/wwVq1a\nhX797v07tmfPHuzduxcAcOvWLVRVVeHgwYM4e/YsXn/9dTz88MMAgDlz5mDKlCnYtWsXcnNzoVar\nMXfuXEyYMMFp5qbT6XD06FF4enoCADZt2gQvLy9Fze327dtYvnw5rl27hra2NqxduxZBQUEOPW5i\nzssZjllaWhouXboEADh37hzGjBmDDRs2OOaYCdQjLS0twrx584QXX3xROHXqlDBv3jzhwIEDgiAI\nwp/+9Cdh//79Fh+bnp4u5ObmCoIgCLt27RI+/PDDDj+vq6sTXn75ZeHWrVvCtWvXTH+WiphzEwRB\niI2NFRoaGsQZfDfsNbclS5YI//rXvwRBEAS9Xi989dVXDj1uYs5LEJzjmBlduXJFmDZtmnDx4kWH\nHTMuKfTQmjVrEBsbi4CAAABAcHAwrly5AkEQ0NTUBLXa/IuG48eP49SpU5g9ezYAoLy8HAcOHMAr\nr7yCZcuWwWAw4NixY3j66afRv39/eHl5ISgoCCdOnHCKubW3t6O6uhorVqxAbGwsdu/eLdm8APvN\n7ejRo7h48SJeffVVfP7553jmmWccetzEnJezHDOjjRs3Ij4+HgEBAQ47ZgxuD+zZsweDBw/G+PHj\nTbcZX9r8+te/RkNDAyIiIsw+dvPmzZg/f75p+8knn8TixYuxfft2BAYG4t1334XBYOjwcs3T0xMG\ng0G8Cd1H7Lk1NzcjPj4e69atw9///nfs2LFDsijZc27nzp2Dt7c3/vGPf2D48OH44IMPHHbcxJ6X\nsxwz4M7ShF6vx8yZMwHAYceMa7g9kJ+fD5VKBb1ej6qqKixZsgQnTpzA3r17MWrUKGzfvh2rV69G\nWlpah8d6vYXaAAAEc0lEQVRdu3YNZ86cwdixY023vfDCC/D29jb9eeXKlQgPD0dTU5PpPk1NTZKt\nl4k9t4EDB+K3v/0tBg4cCAAYO3YsTpw4gdGjRytqbr6+vpg4cSIAYOLEidiwYQMef/xxhxw3sefl\nLMcMAL744gu8/PLLcHO78zXmGo3GIceMZ7g9sH37duTk5GDbtm0IDg7GmjVrMHLkSGg0GgBAQEAA\nrl271uVxhw8fxrPPPtvhtt/97nc4duwYAECv1yM0NBRPPvkkjhw5glu3buH69es4ffo0HnvsMfEn\nBvHn9uOPP2LOnDloa2vD7du3cfToUYSGhoo/Mdh3bj//+c/x9ddfm37+6KOPOuy4iT0vZzlmwJ2/\nh88995xp21HHjGe4faTT6bBo0SKo1Wq4u7tj5cqVAIDFixfjj3/8I0aMGIEzZ85g5MiRHR6Xnp6O\nlStXwt3dHUOHDsXKlSuh0WiQkJCAuLg4CIKARYsWwcPDwxHTAmD/uU2fPh0xMTFwd3fH9OnTMWrU\nKEdMC0Dv57ZkyRIsX74cubm50Gg0WL9+PXx8fGRz3Ow9L2c4ZgBw5swZBAYGmrb9/f0dcsz4aWFE\nRBLhkgIRkUQYXCIiiTC4REQSYXCJiCTC4BIRSYTBJZdQXFyMhIQEiz//z3/+g48//hgAsHPnTuzc\nuRMA8MYbb+DcuXM27+fs2bOmNxAQdcbgEgGoqKgwvbVzzpw5mDNnDoA7oeaVk2QvfOMDuZSSkhJs\n2LABN2/exNWrV5GamopRo0YhNzcXADBixAicP38eAODh4YG6ujokJiZi+/btiI6ORnZ2NkaOHIni\n4mJkZWVh27ZtqKysxJ///GcA6PC210uXLmHFihW4cOECVCoVkpOT8ctf/lL6SZNs8AyXXEpOTg50\nOh327t2LVatWYdOmTXj00UcRGxuL2NhYREdHm+6bmJiIgIAAbNmyBX5+fhafc8mSJUhNTcXevXs7\nvMtp1apViI6Oxp49e/Dee+9hxYoVkn0YEckTz3DJpaxbtw5fffUVvvjiC5SVlXX4AJPeaGxsRF1d\nnenMdebMmcjPzwcAHDp0CD/88APeeecdAEBraytqa2sRHBzct0mQYjG45FLi4uIQERGBiIgIPPvs\ns0hJSenR443rua2trQAAlUrVYY3X+GlUANDe3o6tW7fC19cXAHDx4kUMHTq0r1MgBeOSArmMK1eu\n4Mcff8Qf/vAH/OpXv8LBgwfR1tYG4E4ojRG9n5ubm+k+fn5+OHXqFABg//79pttGjBiBAwcOAAD+\n+c9/mh47duxY7NixAwBw6tQpTJs2DTdu3BBtfiR/DC65DF9fX2i1Wrz00kuYMWMGGhoacPPmTTQ3\nN+MXv/gFPv/8c2zbtq3DY55//nkkJiaitrYWCxcuNK3L3v/ZqevWrUNWVhZmzJiBmpoa0+3Lly9H\nWVkZpk6dikWLFmHt2rWmjxck18RPCyMikgjPcImIJMLgEhFJhMElIpIIg0tEJBEGl4hIIgwuEZFE\nGFwiIokwuEREEvk/pBi1hV+YsZIAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xc3b2cc0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "sqlContext.registerDataFrameAsTable(df,'weather')\n",
-    "Query=\"SELECT * FROM weather\\n\\tWHERE measurement='%s' and station='%s'\"%('TMAX','USC00198301')\n",
+    "Query=\"SELECT * FROM weather\\n\\tWHERE measurement='%s' and station='%s'\"%('TMAX','USC00326025')\n",
     "print Query\n",
     "df1 = sqlContext.sql(Query)\n",
     "print df1.count(),'rows'\n",
@@ -171,7 +183,16 @@
     "rows=df1.rdd.map(lambda row:unpackArray(row['vector'],np.float16)).collect()\n",
     "T=np.vstack(rows)\n",
     "T=T/10.  # scaling to make the temperature be in centingrates\n",
-    "shape(T)"
+    "shape(T)\n",
+    "\n",
+    "\n",
+    "# Matplotlib for additional customization\n",
+    "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
+    "df1 = df1.toPandas()\n",
+    "#df = pd.read_table(filename)\n",
+    "import seaborn as sns\n",
+    "sns.lmplot(x='latitude', y='longitude', data=df1)"
    ]
   },
   {
@@ -796,7 +817,7 @@
   "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
