--- a/Classes/2.PCA/4.5 Weather Analysis - reconstruction SNWD.ipynb
+++ b/Classes/2.PCA/4.5 Weather Analysis - reconstruction SNWD.ipynb
@@ -1012,7 +1012,7 @@
   "celltoolbar": "Slideshow",
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -1046,25 +1046,6 @@
    "toc_cell": false,
    "toc_section_display": "block",
    "toc_window_display": false
-  },
-  "widgets": {
-   "state": {
-    "0d4726d074414304b7910c9bc9aee2a0": {
-     "views": [
-      {
-       "cell_index": 31
-      }
-     ]
-    },
-    "9dfb4bbaf8664891a93b62da7476d8fe": {
-     "views": [
-      {
-       "cell_index": 22
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
