--- a/Classes/2.PCA/5.5 DataOnMaps.ipynb
+++ b/Classes/2.PCA/5.5 DataOnMaps.ipynb
@@ -758,7 +758,7 @@
   "anaconda-cloud": {},
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -792,10 +792,6 @@
    "toc_cell": false,
    "toc_section_display": "block",
    "toc_window_display": false
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.0.0"
   }
  },
  "nbformat": 4,
