--- a/Classes/HW-6/mynb-final.ipynb
+++ b/Classes/HW-6/mynb-final.ipynb
@@ -46,7 +46,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 0: Load data to a RDD"
+    "# Part 0: Load data to a RDD\n",
+    "\n"
    ]
   },
   {
@@ -77,7 +78,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Name: Anirudh\n",
+    "#email: anravich@eng.ucsd.edu\n",
+    "#Pid: A53222305"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# -*- coding: utf-8 -*-"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import findspark\n",
+    "findspark.init()\n",
+    "#sc.stop()\n",
+    "from pyspark import SparkContext\n",
+    "sc = SparkContext(master=\"local[4]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -89,46 +127,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "IOError",
+     "evalue": "[Errno 2] No such file or directory: '../../Data/hw6-files-10mb.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-a2a91370136d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlistOfFiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../../Data/hw6-files-10mb.txt\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"r\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mlistOfFiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdataRDD\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtextFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m','\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlistOfFiles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcache\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint_count\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataRDD\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: '../../Data/hw6-files-10mb.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "listOfFiles = []\n",
+    "with open(\"../../Data/hw6-files-10mb.txt\", \"r\") as file:\n",
+    "    listOfFiles = [name.strip() for name in file]\n",
+    "dataRDD = sc.textFile(','.join(listOfFiles)).cache()\n",
+    "print_count(dataRDD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 1: Parse JSON strings to JSON objects\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part 1: Parse JSON strings to JSON objects"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Python has built-in support for JSON."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{u'id': 1,\n",
-       " u'name': u'A green door',\n",
-       " u'price': 12.5,\n",
-       " u'tags': [u'home', u'green']}"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -164,16 +213,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
     "def safe_parse(raw_json):\n",
     "    # your code here\n",
-    "    pass\n",
+    "    try:\n",
+    "        json_obj = json.loads(raw_json)\n",
+    "    except ValueError, e:\n",
+    "        return False\n",
+    "    if ((\"user\" in json_obj) & (\"text\" in json_obj)):\n",
+    "        return True\n",
+    "    else: \n",
+    "        return False\n",
     "\n",
-    "# your code here"
+    "# your code here\n",
+    "filteredRDD = dataRDD.filter(lambda x: safe_parse(x)).map(lambda x: json.loads(x))\n",
+    "userTweetRDD = filteredRDD.map(lambda x: (x['user']['id_str'], x['text'].encode('utf-8'))).cache()"
    ]
   },
   {
@@ -203,10 +263,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "distinctUserRDD = userTweetRDD.keys().distinct()\n",
+    "print_users_count(distinctUserRDD.count())"
    ]
   },
   {
@@ -235,10 +298,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "from pickle import load\n",
+    "\n",
+    "pickleData = load(open('../../Data/users-partition.pickle', 'rb'))"
    ]
   },
   {
@@ -255,10 +322,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "groupWithCount = userTweetRDD.map(lambda x: (pickleData[x[0]], 1) if x[0] in pickleData else (7, 1))\n",
+    "finalCount = groupWithCount.reduceByKey(lambda x, y: x+y)\n",
+    "finalCount = finalCount.sortByKey(ascending=True)"
    ]
   },
   {
@@ -297,26 +368,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "print_post_count(finalCount.collect())"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Part 3:  Tokens that are relatively popular in each user partition"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "In this step, we are going to find tokens that are relatively popular in each user partition.\n",
     "\n",
@@ -345,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -570,7 +639,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from math import log\n",
@@ -608,10 +679,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "tokenizedTweet = userTweetRDD.flatMap(lambda x: tok.tokenize(x[1]))\n",
+    "print_count(tokenizedTweet.distinct())"
    ]
   },
   {
@@ -654,10 +728,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "distinctTweet = userTweetRDD.map(lambda x: (x[0], tok.tokenize(x[1]))).flatMap(lambda x: [(x[0], i) for i in x[1]])                .distinct().cache()\n",
+    "\n",
+    "groupedTweets = distinctTweet.map(lambda x: (x[1], 1)).reduceByKey(lambda x, y: x+y).filter(lambda x: x[1]>100).cache()\n",
+    "\n",
+    "print_count(groupedTweets)\n",
+    "\n",
+    "mostFrequentToken = groupedTweets.map(lambda x: (x[1], x[0])).sortByKey(ascending=False).map(lambda x: (x[1], x[0]))\n",
+    "\n",
+    "print_tokens(mostFrequentToken.take(20))\n"
    ]
   },
   {
@@ -771,17 +855,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "GT100Tweets = dict(groupedTweets.collect())\n",
+    "distinctTweetFiltered = distinctTweet.filter(lambda x: x[1] in GT100Tweets)\n",
+    "\n",
+    "groupedByGroupId = distinctTweetFiltered.map(lambda x: ((pickleData[x[0]], x[1]), 1) if x[0] in pickleData else ((7, x[1]), 1))\n",
+    "\n",
+    "finalCounts = groupedByGroupId.reduceByKey(lambda x, y: x+y)\n",
+    "\n",
+    "relativePop = finalCounts.map(lambda x: ((get_rel_popularity(x[1], GT100Tweets[x[0][1]]), x[0][1]), x[0][0])).cache()\n",
+    "\n",
+    "for i in xrange(8):\n",
+    "    finalResult = relativePop.filter(lambda x: x[1] == i).sortByKey(ascending=False).map(lambda x: (x[0][1], x[0][0]))\n",
+    "    print_tokens(finalResult.take(10), i)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "(4) (optional, not for grading) The users partition is generated by a machine learning algorithm that tries to group the users by their political preferences. Three of the user groups are showing supports to Bernie Sanders, Ted Cruz, and Donald Trump. \n",
     "\n",
@@ -791,19 +886,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Change the values of the following three items to your guesses\n",
     "users_support = [\n",
-    "    (-1, \"Bernie Sanders\"),\n",
-    "    (-1, \"Ted Cruz\"),\n",
-    "    (-1, \"Donald Trump\")\n",
+    "    (3, \"Bernie Sanders\"),\n",
+    "    (5, \"Ted Cruz\"),\n",
+    "    (7, \"Donald Trump\")\n",
     "]\n",
     "\n",
     "for gid, candidate in users_support:\n",
     "    print \"Users from group %d are most likely to support %s.\" % (gid, candidate)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -826,5 +932,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
